# libw3d

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
include/libw3d/: chunk.hpp  loader.hpp  math.hpp  model.hpp  types.hpp  w3d.hpp
include/libw3d/chunks/: animation.hpp  hierarchy.hpp  hlod.hpp  material.hpp  mesh.hpp  normalmap.hpp  texture.hpp
src/: CMakeLists.txt  chunk.cpp  loader.cpp  model.cpp  util.hpp
src/chunks/: animation.cpp  hierarchy.cpp  hlod.cpp  material.cpp  mesh.cpp  normalmap.cpp  texture.cpp
tools/: CMakeLists.txt
tools/w3d_util/: CMakeLists.txt  main.cpp
tools/w3d_view/: CMakeLists.txt  arcball.hpp  flextGL.c  flextGL.h  main.cpp  model.cpp  model.hpp  shader.cpp  shader.hpp  targa.hpp  texture.cpp  texture.hpp  viewer.cpp  viewer.hpp
tools/w3d_view/shaders/: DefaultW3D.fs  DefaultW3D.vs
